# PyTomoATT

./: .buildinfo  .gitignore  README.md  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  src_rec_file  tx
.github/workflows/: build-docs.yml  build-test-conda.yml  build-test.yml  python-publish.yml
_modules/: index.html
_modules/pytomoatt/: attarray.html  checkerboard.html  data.html  model.html  para.html  src_rec.html
_sources/: index.md.txt  installation.md.txt
_sources/modules/: attarray.rst.txt  index.md.txt  model.rst.txt
_sources/usages/: ckb.md.txt
examples/: input_params.yml  src_rec_file_eg
modules/: attarray.html  checkerboard.html  data.html  index.html  model.html  para.html
modules/src_rec/: pytomoatt.src_rec.SrcRec.add_noise.html  pytomoatt.src_rec.SrcRec.append.html  pytomoatt.src_rec.SrcRec.box_weighting.html  pytomoatt.src_rec.SrcRec.calc_distaz.html  pytomoatt.src_rec.SrcRec.copy.html  pytomoatt.src_rec.SrcRec.count_events_per_station.html  (+30 more)
pytomoatt/: __init__.py  attarray.py  checkerboard.py  data.py  distaz.py  model.py  para.py  script.py  setuplog.py  src_rec.py  utils.py  vis.py
source/: conf.py  index.md  installation.md
src/: src_rec.py
test/: grt_tt_ISC.ipynb  input_params_proj1_层状模型合成到时.yml  jpn  src_rec_elimination.ipynb  test.ipynb  test_append_srcrec.ipynb  test_create_model.py  test_from_seispy.py  test_para.py  test_rotate.py  test_script.py  test_src_rec.ipynb  test_src_rec.py
usages/: ckb.html  model.html
(+64 files in other folders)
